updated html and styling

--- a/index.html
+++ b/index.html
@@ -8,7 +8,28 @@
     <style src="index.html"></style>
 </head>
 <body>
+    <div>
+    <header>
     <h1>Welcome to AI Quotes Generator</h1>
+    </header>
+
+    <main>
+        <form>
+            <input type="text"
+            placeholder="Enter text here....."
+            autofocus
+            required
+            autocomplete="off" />
+        </form>
+        <div>
+            The quotes will be header
+            <br />
+            .......
+        </div>
+    </main>
+    <footer>This project was coded by<a href="https://github.com/Santiey">Santy</a>❤️
+    and is on <a href="https://github.com/Santiey/MyAIassignment">Github</a> hosted on <a href="">Netlify</a></footer>
     <Script src="index.js"></Script>
+    </div>
 </body>
 </html>
