--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
     <title>AI project</title>
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
-    <style src="index.html"></style>
+    <style src="style.css"></style>
 </head>
 <body>
     <div class="container">
