--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
-    <title>AI project</title>
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
-    <style src="style.css"></style>
+    <link rel="stylesheet" href="src/style.css" />
+    <title>AI project</title>
 </head>
 <body>
     <div class="container">
@@ -15,19 +15,17 @@
     </header>
 
     <main>
-        <form id="qutes-genetator-form">
+        <form id="quote-genetator-form">
             <input type="text"
             placeholder="Enter text here....."
             autofocus
             required
             autocomplete="off"
-            class="prompt" />
+            class="instructions" 
+            id="user-instructions" />
             <input type="submit" class="button"/>
         </form>
-        <div class="quote">
-            The quotes will be here
-            <br />
-            .......
+        <div class="quote" id="quote">
         </div>
     </main>
     <footer>This project was coded by<a href="https://github.com/Santiey">Santy</a>❤️
