--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
+
     <link rel="stylesheet" href="src/style.css" />
     <title>AI project</title>
 </head>
@@ -15,7 +16,7 @@
     </header>
 
     <main>
-        <form id="quote-genetator-form">
+        <form id="quote-form">
             <input type="text"
             placeholder="Enter text here....."
             autofocus
@@ -30,7 +31,7 @@
     </main>
     <footer>This project was coded by <a href="https://github.com/Santiey">Santy</a>❤️
     and is on <a href="https://github.com/Santiey/MyAIassignment">Github</a> hosted on <a href="">Netlify</a></footer>
-    <Script src="index.js"></Script>
     </div>
+    <script src="index.js"></script>
 </body>
 </html>
